# reconx

./: .gitignore  Makefile  README.md  SETUP.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: api-gateway.md  ingestion-service.md  reconciliation-engine.md  resolution-service.md
infra/grafana/provisioning/dashboards/: dashboard.yaml  reconx.json
infra/grafana/provisioning/datasources/: prometheus.yaml
infra/prometheus/: prometheus.yml
proto/: common.proto  engine.proto  ingestion.proto  resolution.proto
scripts/: run-integration-tests.sh  run-local.sh  smoke_test.sh
services/engine/: Cargo.toml  Dockerfile  Makefile  build.rs
services/engine/config/: default.toml
services/engine/src/: config.rs  error.rs  main.rs  metrics.rs
services/engine/src/db/: mod.rs  models.rs  queries.rs
services/engine/src/engine/: matcher.rs  mod.rs  rules.rs  worker.rs
services/engine/src/grpc/: mod.rs  proto.rs  server.rs
services/gateway/: Dockerfile  Makefile  go.mod
services/gateway/cmd/: main.go
services/gateway/internal/clients/: clients.go
services/gateway/internal/config/: config.go
services/gateway/internal/handlers/: handlers.go
services/gateway/internal/metrics/: metrics.go
services/gateway/internal/middleware/: auth.go
services/ingestion/: Dockerfile  Makefile  go.mod  go.sum
services/ingestion/cmd/: main.go
services/ingestion/internal/adapters/: adapter.go  db.go  file.go  kafka.go  rest.go  webhook.go
services/ingestion/internal/config/: config.go
services/ingestion/internal/dlq/: dlq.go
services/ingestion/internal/idempotency/: idempotency.go
services/ingestion/internal/metrics/: metrics.go
services/ingestion/internal/pipeline/: normalize.go  pipeline.go  validate.go
services/ingestion/internal/ratelimit/: ratelimit.go
services/ingestion/internal/server/: server.go
services/ingestion/internal/storage/: storage.go
services/resolution/: Dockerfile  Makefile  go.mod  go.sum
services/resolution/cmd/: main.go
services/resolution/internal/api/: handler.go
services/resolution/internal/config/: config.go
services/resolution/internal/db/: db.go
services/resolution/internal/engine/: client.go
services/resolution/internal/metrics/: metrics.go
services/resolution/internal/resolver/: strategies.go
tests/integration/: audit_test.go  client_test.go  go.mod  harness_test.go  idempotency_test.go  match_test.go  resolve_test.go  retry_test.go
(+2 files in other folders)
